2008-11-07  Stephen Deasey <sdeasey@users.sf.net>

	* include/ns.:
	* nsd/driver.c:
	* nsd/sockfile.c:
	* nssock/nssock.c: Drivers can now leave Ns_Driver.sendFileProc
	unimplemented - it is an optimisation only. The sendProc will be
	called as necessary to send files.

	Ns_SockSendFileBufsIndirect not exported.

	Ns_SockSendFile etc. now take an Ns_Sock rather than a plain
	file descriptor. This is kind of dissapointing because it breaks
	the symetry with Ns_SockSendBufs etc., so this call can only be
	used with connection sockets, not sockets in general. However, the
	Ns_Sock context is needed in the fallback case to pass on to the
	drivers Ns_DriverSend proc, and there looks like no otrher option.

2008-11-07  Vlad Seryakov <seryakov@users.sf.net>

	tcl/fastpath.tcl: Revert back because it is bad and a security hole

2008-11-06  Vlad Seryakov <seryakov@users.sf.net>

	tcl/fastpath.tcl: Check for 0.0.0.0 address in nssock and
        generate urls using Host: header instead

2008-10-29  Vlad Seryakov <seryakov@users.sf.net>

	configure.in: Change version to 4.99.3 to distinguish between incompatible versions

2008-10-22  Vlad Seryakov <seryakov@users.sf.net>

	include/ns.h:
	nsd/conn.c: Removed public functions Ns_connSockContext and Ns_ConnDriverContext.
        Ns_Sock already has all pointers.

	nsd/driver.c: Fixed bug with status code in SockAccept where it's been set 
        and then compared for other values

	modules/nsssl.c: Fixed bug with checking not-NULL pointer for NULL

2008-10-21  Vlad Seryakov <seryakov@users.sf.net>

        include/ns: Made all definitions using the same format

        nsd/return.c: Ns_ConnSetRequiredHeaders is broken, moved to Deperecated status

        nsd/conn.c: Added new public function Ns_ConnContentSize for cases when
        Ns_ConnContent returns binary data

        modules/nsphp: Updated to latest API, supports streaming and does not use
        deperecated functions anymore
